# FastAPI-Planner

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/database/: connection.py
src/models/: events.py  users.py
src/routes/: events.py  users.py
