[tool.poetry]
name = "planner"
version = "0.1.0"
description = ""
authors = ["Gihyuk Kwon <imrlgur81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
beanie = "^1.29.0"
python-dotenv = "^1.1.0"
pydantic = {extras = ["email"], version = "^2.11.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
